--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "author": "Zenkaku Hiragana and C2H4",
   "version": "1.0.0",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/voice": "^0.6.0",
-    "discord.js": "^13.2.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.13.0",
+    "discord.js": "^14.6.0",
     "ffmpeg": "^0.0.4",
     "tweetnacl": "^1.0.3",
-    "ytdl-core": "^4.9.1",
-    "ytpl": "^2.2.3"
+    "ytdl-core": "^4.11.2",
+    "ytpl": "^2.3.0"
   },
   "description": "",
   "engines": {
@@ -20,7 +20,7 @@
   "main": "DK_OK_bot.js",
   "repository": {
     "type": "git",
-    "url": "https://git.heroku.com/dk-ok-bot-js.git"
+    "url": "https://github.com/dk-ok-bot-js.git"
   },
   "scripts": {
     "start": "node ./DK_OK_bot.js"
