--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Launch DK_OK_bot
 
 on:
@@ -24,3 +21,5 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: node DK_OK_bot.js
+      env:
+        DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
